Fix font size on mobile with media query

--- a/src/styles/Header.css
+++ b/src/styles/Header.css
@@ -13,3 +13,9 @@ header p {
   font-weight: var(--secondary-font-weight);
   font-size: 1.3rem;
 }
+
+@media(max-width: 767px) {
+  header h1 {
+    font-size: 3rem;
+  }
+}
